Bug 15391 - smbclient leaks fds with showacls
Summary: smbclient leaks fds with showacls
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
: 15408 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-08 08:18 UTC by Volker Lendecke
Modified: 2023-07-06 14:00 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.18 and 4.17 (1007 bytes, patch)
2023-06-09 06:42 UTC, Volker Lendecke
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-06-08 08:18:24 UTC
Have patch, need bugnumber
Comment 2 Samba QA Contact 2023-06-08 16:56:04 UTC
This bug was referenced in samba master:

5c52f71c0d0e162dcbf42378357313035efa860f
Comment 3 Volker Lendecke 2023-06-09 06:42:16 UTC
Created attachment 17914 [details]
Patch for 4.18 and 4.17
Comment 4 Jule Anger 2023-06-09 11:40:31 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 5 Samba QA Contact 2023-06-09 14:44:06 UTC
This bug was referenced in samba v4-17-test:

f26b205786ea4074aae19ed21c348ec7ac275856
Comment 6 Samba QA Contact 2023-06-12 08:26:05 UTC
This bug was referenced in samba v4-18-test:

c4968128b7f2c75aa96eb7e446719d766950ef58
Comment 7 Jule Anger 2023-06-12 08:30:54 UTC
Closing out bug report.

Thanks!
Comment 8 Ralph Böhme 2023-06-29 14:08:26 UTC
*** Bug 15408 has been marked as a duplicate of this bug. ***
Comment 9 Samba QA Contact 2023-07-05 11:35:04 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.4):

c4968128b7f2c75aa96eb7e446719d766950ef58
Comment 10 Samba QA Contact 2023-07-06 14:00:33 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.9):

f26b205786ea4074aae19ed21c348ec7ac275856